refactor Inventories\' endpoints
