# src/models/Inventory.ts
@@ -1,5 +1,8 @@
 type Inventory ={
+    inventoryId?: String,
     productId: String,
+    color: String,
+    size: String,
     quantity: number
 }
 export default Inventory;
