# src/models/Order.ts
@@ -3,9 +3,7 @@ import Status from './Status'
 type Order = {
     customerId: String,
     orderId: String,
-    productId: String,
     date: Date,
-    status: Status,
-    quantity : Number,
+    status: Status
 };
 export default Order;
